implemented bottom navigation ui (#1)
* implemented bottom navigation ui

* Update bottom_navigation.dart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ flutter:
   assets:
     - assets/localization/
     - assets/images/
-#    - assets/icon/
+    - assets/icon/
     - assets/config/
     - assets/release_configs/
 
