--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Kendama will not need access to your microphone</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Kendama will need access to your camera to take profile pictures</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Kendama will need access to your library to upload trick videos you select</string>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>CFBundleDevelopmentRegion</key>
