--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   shimmer: ^3.0.0
   video_player: ^2.7.2
   webview_flutter: ^4.2.4
+  url_launcher: ^6.1.14
 
 dev_dependencies:
   flutter_test:
