Finishing caching of basic data
* part of caching

* finished reading/writing cached data

* improved caching

* refactor

* finished caching

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   video_player: ^2.7.2
   webview_flutter: ^4.2.4
   url_launcher: ^6.1.14
+  app_group_directory: ^2.0.0
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
