Implemented profile page, settings, updating player company, loading animation
* rough damxwidget

* refactoring

* Updates

* updates

* image show

* Update

* small update

* foreign player query

* my id

* added player id pathing

* a

* player id parsing

* comments

* updated image upload

* update

* refactoring player

* Updates on profile

* leaderboard type size added

* update on size again

* resolving something

* Badge Model

* Badge model updated

* renam,ed

* updates

* fetchPlayerBadge rpc

* degrade

* trophy icon exported

* updated fetching of badges

* ui changes

* Updates

* font. test

* Resolving final comments

* Settings page setup

* settings

* localization, placeholder for change teams

* updates

* added bottom nav image

* implemented image updating in bottom nav

* Update profile_page_provider.dart

* Update main.dart

* conflicts

* fixes

* gif loading animation

* changing companies

* fixed startup bug

---------

Co-authored-by: NikolaCredeo <n.milosevic0111@gmail.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,10 @@ dependencies:
   video_player: ^2.7.2
   webview_flutter: ^4.2.4
   url_launcher: ^6.1.14
+  tuple: ^2.0.2
   app_group_directory: ^2.0.0
   path_provider: ^2.1.1
+  flutter_gif: ^0.0.4
 
 dev_dependencies:
   flutter_test:
@@ -42,6 +44,7 @@ flutter:
     - assets/images/
     - assets/icon/
     - assets/config/
+    - assets/gif/
     - assets/statics/
     - assets/release_configs/
 
