--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   app_group_directory: ^2.0.0
   path_provider: ^2.1.1
   flutter_gif: ^0.0.4
+  preload_page_view: ^0.2.0
 
 dev_dependencies:
   flutter_test:
