--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: App used by kendama players to track their progress.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 0.0.3+6
+version: 0.0.4+7
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -35,6 +35,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  change_app_package_name: ^1.1.0
 
 flutter:
   uses-material-design: true
