--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_gif: ^0.0.4
   preload_page_view: ^0.2.0
   flutter_mailer: ^2.1.1
+  pay: ^1.1.2
 
 dev_dependencies:
   flutter_test:
