--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: App used by kendama players to track their progress.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.1+9
+version: 1.0.1+10
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -32,6 +32,7 @@ dependencies:
   preload_page_view: ^0.2.0
   flutter_mailer: ^2.1.1
   pay: ^1.1.2
+  in_app_purchase: ^3.1.11
 
 dev_dependencies:
   flutter_test:
